[gd_scene load_steps=6 format=3 uid="uid://b7qcv7bganhtr"]

[ext_resource type="Script" uid="uid://c7n105tw43omo" path="res://menus/scripts/main_menu.gd" id="1_ij7vn"]
[ext_resource type="Texture2D" uid="uid://c6l2q4hxhxitv" path="res://menus/assets/images/background.jpeg" id="2_yjgyn"]
[ext_resource type="AudioStream" uid="uid://cdvuq8q4l43nc" path="res://menus/assets/music/DavidKBD - Reckless Punk-Metal Pack - 01 - Run Like the Wind.ogg" id="3_yjgyn"]
[ext_resource type="AudioStream" uid="uid://bp8r1tfby1k46" path="res://musics/click-menu-button.mp3" id="4_rqbgu"]

[sub_resource type="LabelSettings" id="LabelSettings_rqbgu"]
font_size = 50

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ij7vn")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_yjgyn")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.032
offset_left = -140.5
offset_top = 89.0
offset_right = 140.5
offset_bottom = 134.95999
grow_horizontal = 2
text = "Rage Tower"
label_settings = SubResource("LabelSettings_rqbgu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 2

[node name="Play" type="Button" parent="Main/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="Main/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="Main/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="SettingsContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -131.0
offset_right = 609.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="SettingsContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/PanelContainer"]
layout_mode = 2

[node name="Volume" type="HSlider" parent="SettingsContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
value = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Resolution" type="OptionButton" parent="SettingsContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
selected = 1
item_count = 2
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1

[node name="FullScreen" type="CheckBox" parent="SettingsContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="MuteVolume" type="CheckBox" parent="SettingsContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="Close" type="Button" parent="SettingsContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_yjgyn")
volume_db = -10.0
autoplay = true

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_rqbgu")
volume_db = -10.0

[connection signal="pressed" from="Main/VBoxContainer/Settings" to="SettingsContainer" method="show"]
[connection signal="value_changed" from="SettingsContainer/PanelContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="item_focused" from="SettingsContainer/PanelContainer/VBoxContainer/HBoxContainer/Resolution" to="." method="_on_resolution_item_focused"]
[connection signal="item_selected" from="SettingsContainer/PanelContainer/VBoxContainer/HBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="toggled" from="SettingsContainer/PanelContainer/VBoxContainer/HBoxContainer/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="SettingsContainer/PanelContainer/VBoxContainer/HBoxContainer/MuteVolume" to="." method="_on_mute_volume_toggled"]
[connection signal="pressed" from="SettingsContainer/PanelContainer/VBoxContainer/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="SettingsContainer/PanelContainer/VBoxContainer/Close" to="SettingsContainer" method="hide"]
